# substrate

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.npm.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.typecheck.json  tsdown.config.ts  vitest.config.ts
.claude/: settings.json  statusline.sh
_planning/: 2026-07-04-income-sources-field-feedback.md  2026-07-05-substrate-bleeding-edge-plan.md  2026-07-05-substrate-remediation-audit.md  2026-07-06-h6-conclusive-gate-report.json  2026-07-06-h6-conclusive-gate.md  2026-07-06-h6-final-gate-field-feedback.md  2026-07-06-redteam-adversarial-review.md  2026-07-06-redteam-findings.json  2026-07-07-acceptance-gate-design-brief.md  2026-07-09-registry-provenance-design-brief.md  item-7-statestore-arc-plan-v1-FALSIFIED.md  item-7-statestore-arc-plan.md
docs/: 2026-05-23-eval-framework-plan.md  2026-05-23-eval-frameworks-for-coding-harnesses.md  2026-05-27-fleet-data-architecture-consolidation.md  2026-05-29-codex-managed-config-policy-ask.md  2026-05-31-epic-81-first-calibration.md  2026-06-12-claude-code-enterprise-config-recommendations.md  2026-06-17-infosec-managed-settings-review.md  2026-07-06-container-execution-seam.md  adapter-implementation.md  agent-memory-persistence.md  agent-memory.md  eval-pack-upgrade-ci-setup.md  (+8 more)
fixtures/consumer-python-uv/: .gitignore  README.md  bootstrap.sh  pyproject.toml
fixtures/consumer-python-uv/_bmad-output/planning-artifacts/: epics.md
fixtures/consumer-python-uv/tests/: test_greet.py
(+1566 files in other folders)
