[project]
name = "greeter"
version = "0.1.0"
description = "Hardening-program fixture: canonical Python/uv consumer project"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greeter"]

[dependency-groups]
dev = ["pytest>=8"]
